--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Web security</h2>
     <img src="images/javapic.jpeg" alt="Websecurity" />
     <main>
+      
         <p id="web-security-question">
           One of the best ways to ensure security on a website is to ensure the
           client have secure authorization and authentication. They must accept
@@ -39,7 +40,10 @@
           feel pretty secure. But it demands to always be up to date with all of
           the system to be best protected.
         </p>
+        <h3>Sources</h3>
+        <p>Web and communication Technology (Module 1) @ Noroff</p>
       </div>
+      <p>&nbsp;</p>
     </main>
     <a href="about.html">About</a>
   </body>
