--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div><p>Welcome to my first website!</p>
 
     <h2>Web security</h2>
-    <img src="images/javapic.jpeg" alt="Websecurity" />
+    <img src="images/cyber attack.jpg" alt="Websecurity" />
     <main>
       
         <p id="web-security-question">
@@ -42,6 +42,7 @@
         </p>
         <h3>Sources</h3>
         <p>Web and communication Technology (Module 1) @ Noroff</p>
+        <a href="https://www.wallpaperflare.com/security-solutions-global-security-online-security-house-security-wallpaper-aavkc">Link to the picture</a>
       </div>
       <p>&nbsp;</p>
     </main>
